# Formulario_Atendimento

./: 404.html  Dockerfile  README.md  docker-compose.yml  index.html  objects.inv  pyproject.toml
API/: index.html
backend/: index.html
configuracao_avancada/: index.html
frontend/: index.html
funcionalidades/: index.html
instalacao/: index.html
search/: search_index.json
src/: main.py  mkdocs.yml
src/backend/: crud.py  database.py
src/docs/: API.md  backend.md  configuracao_avancada.md  frontend.md  funcionalidades.md  index.md  instalacao.md  troubleshooting.md
src/frontend/: app.py
troubleshooting/: index.html
